--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,3 +14,18 @@
     margin-right: 10vw;   
     color: red; 
 }
+
+.countryContainer {
+    width: 160px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.countryname {
+    margin: auto;
+}
+
+.flag {
+    max-width: 160px;
+    max-height: 100px;
+}
